    + [FL] Change check for binary-compiled-with-profiling-enabled on
      hppa to look for _mcount instead of __gmon_start__ since the
      latter can't be used as an indicator on that arch (Closes: #207063)
  * checks/changelog-files{,.desc}:
    + [HE] New check latest-debian-changelog-entry-without-new-date, comparing
      the dates of the last 2 changelog entries. (Closes: #111215)
  * checks/control-file{,.desc}:
    + [HE] Introduced new check script. New checks:
      - build-info-in-binary-control-file-section, triggered
        by a Build-* field in a binary section (Closes: #94928)
      - debian-control-file-uses-obsolete-national-encoding, stolen from
        changelog-file (Closes: #247197)
  * checks/cruft{,.desc}:
    + [JvW] cvsignore-file-in-source is now info, because it happens so often
      by upstream, and is only very minor in size
    + [HE] New check: source-contains-cvs-conflict-copy, triggered by 
      .#file.version files. They are created by cvs when it tries to merge
      local changes and an update from the repo. (Closes: #246060)
    + [JvW] Also check for source-contains-svn-conflict-copy (for .r123 and
      .mine files)
  * checks/debhelper:
    + [FL] Avoid Perl warning about undefined values. Noted by JvW.
  * checks/fields{,.desc}:
    + [JvW] Added debian-revision-should-not-be-zero, suggested by Adam
      Conrad
    + [FL] Downgrade build-depends-without-arch-dep to warning as it's
      heuristic. Reword explanation. This partly handles #247171.
    + [HE] Check Build-Depends(-Indep) for virtual packages without a 
      real dependency. Fix based on patch by Steinar H. Gunderson
      <sgunderson@bigfoot.com>. (Closes: #255593)
    + [HE] Don't issue virtual-package-depends-without-real-package-depends 
      if this happens in Suggests. (Closes: #254367)
  * checks/huge-usr-share:
    + [FL] Skip check for packages that don't have usr/share at all
      (Closes: #247708)
  * checks/menus: