@@ -18,6 +18,8 @@ lintian (1.23.1~alpha) unstable; urgency=low
   * checks/changelog-files{,.desc}:
     + [HE] New check latest-debian-changelog-entry-without-new-date, comparing
       the dates of the last 2 changelog entries. (Closes: #111215)
+  * checks/common-data.pm:
+    + [JvW] Add libgl(u)-dev to list of virtual packages (Closes: #255595)
   * checks/control-file{,.desc}:
     + [HE] Introduced new check script. New checks:
       - build-info-in-binary-control-file-section, triggered
@@ -114,7 +116,7 @@ lintian (1.23.1~alpha) unstable; urgency=low
     + [FL] Fix sort of copy & paste error which caused the whole
       script to behave ill
 
- -- Debian Lintian Maintainers <lintian-maint@debian.org>  Tue, 18 May 2004 00:03:28 +0200
+ -- Debian Lintian Maintainers <lintian-maint@debian.org>  Tue, 29 Jun 2004 16:30:24 +0200
 
 lintian (1.23.0) unstable; urgency=low
 
